# mexc-web-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py  websocket_stream.py
mexc_web/: __init__.py
mexc_web/_internal/: asset.py  errors.py  transport.py  ucenter.py
mexc_web/rest/: __init__.py  account.py  base.py  client.py  market.py  orders.py  plan.py  positions.py  spot.py  stp.py  tpsl.py  trailing.py  user.py  wallet.py
mexc_web/ws/: __init__.py  client.py
tests/: test_spot.py  test_transport.py  test_ucenter.py  test_wallet.py
